feat: Integrated zwyz's deobfuscator
Java version has been bumped up to the latest LTS (21)

Slight regression with this...
remap.txt has been removed, as it needs a rewrite

BZip2 in 317 has an exception range error with zwyz renamer